Updated build system

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = pypeernet
-version = 1.0.1
+version = 2.0.0
 author = Sunip K. Mukherjee
 author_email = sunipkmukherjee@gmail.com
 description = Python bindings for PeerNet (https://github.com/sunipkm/peernet.git)
@@ -26,10 +26,10 @@ zip_safe = False
 include_package_data = True
 install_requires =
 package_dir=
-  =./
+  =.
 
 [options.packages.find]
-  where=./
+  where=.
 
 [options.extras_require]
 tests =
